feat(API): add style to the manifest
